--- a/package.json
+++ b/package.json
@@ -13,5 +13,19 @@
     "axios": "^1.0.0",
     "dotenv": "^16.0.2",
     "regex": "^0.1.1"
-  }
+  },
+   "dependencies": {
+        "axios": "^0.27.2",
+        "chai": "^4.3.6",
+        "chai-http": "^4.3.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.2",
+        "express": "^4.18.1",
+        "mocha": "^10.0.0",
+        "mongoose": "^6.6.1",
+        "nodemon": "^2.0.20"
+      },
+      "devDependencies": {
+        "nyc": "^15.1.0"
+      }
 }
